--- a/ekip-kalir.html
+++ b/ekip-kalir.html
@@ -65,6 +65,27 @@
                         </div>
                     </div>
 
+                    <div class="card" style="width: 20rem;">
+                        <img class="card-img-top" src="img/crew-dragon.jpg" alt="Crew-Dragon">
+                        <div class="card-block">
+                            <h4 class="card-title">Card title</h4>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's
+                                content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </section>
+                <hr>
+                <br>
+                <section class="list-example">
+                    <div class="card">
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Cras justo odio</li>
+                            <li class="list-group-item">Dapibus ac facilisis in</li>
+                            <li class="list-group-item">Vestibulum at eros</li>
+                        </ul>
+                    </div>
                 </section>
 
             </div>
